# web-shop-fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Project M3 FastAPI.md  README.md  dev.sh  docker-compose.yml  main.py  nginx.conf  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 4506b78c0227_make_review_product.py  473d60d04915_initial.py  4b48ef935f6a_update_models.py  5ae51aa90460_some_update.py  6c9a7b8d1f2e_make_review_comment_nullable.py  893b6920c186_init_last_try.py  9ab5a0048b77_initial_migration.py  b1f461bbd470_init_again_and_again.py  b926e70c0209_init_again.py  bbdb36e61860_initial_async_generate.py
app/admin/: __init__.py  auth.py  setup.py  views.py
app/api/: __init__.py
app/api/v1/: api.py  router_factory.py  utils.py
app/core/: __init__.py  auth.py  config.py  database.py  deps.py  handlers.py  security.py  templates.py
app/core/certs/: README.md
app/crud/: __init__.py  base.py  category.py  order.py  order_item.py  product.py  review.py  user.py
app/models/: __init__.py  admin.py  base.py  category.py  order.py  order_item.py  product.py  review.py  user.py
app/schemas/: __init__.py  auth.py  base.py  carts.py  category.py  order.py  order_item.py  product.py  review.py  user.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: account.html  account_order_detail.html  account_orders.html  account_password.html  account_profile.html  base.html  cart.html  catalog.html  checkout.html  forgot_password.html  guides-recipes.html  home.html  login.html  product-caramel-malt.html  product-cascade-hops.html  product-centennial-hops.html  product-citra-hops.html  product-detail.html  product-imperial-yeast.html  product-maris-otter-malt.html  product-mosaic-hops.html  product-pilsner-malt.html  product-saaz-hops.html  product-safale-us05-yeast.html  product-unmalted-wheat.html  product-west-coast-ipa-kit.html  register.html
app/templates/admin/: add.html  dashboard.html  products.html
app/utils/: cart.py
app/web/: __init__.py  account.py  auth.py  cart.py  catalog.py  checkout.py  home.py  product.py  router.py
tests/api/v1/:  categories.http  auth.http
(+8 files in other folders)
