[project]
name = "web-shop-fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pre-commit>=4.5.1",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "sqladmin>=0.22.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
